// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskListItem renders correctly 1`] = `
<li
  className="list-group-item task-list-item"
>
  <div
    className="task-list-item-badges"
  >
    <span
      className="task-list-hours"
    >
      <span
        className="label label-info"
      >
        60m 0s
      </span>
    </span>
    <span
      className="task-list-issue"
    >
      <a
        href="/"
      />
    </span>
  </div>
  <div
    className="task-list-item-main"
  >
    <h4
      className="task-list-description"
    >
      <span
        className=""
      >
        <span
          className="title"
          onClick={[Function]}
        >
          My Task
        </span>
      </span>
      <span
        className="hidden"
      >
        <input
          className="title-input"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Click to add a title"
          type="text"
          value="My Task"
        />
      </span>
    </h4>
  </div>
  <div
    className="task-list-item-buttons"
  >
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="glyphicon glyphicon-trash"
      />
    </button>
  </div>
</li>
`;

exports[`TaskListItem renders correctly 2`] = `
<li
  className="list-group-item task-list-item running"
>
  <div
    className="task-list-item-badges"
  >
    <span
      className="task-list-hours"
    >
      <span
        className="label label-warning"
      >
        0s
      </span>
    </span>
    <span
      className="task-list-issue"
    >
      <a
        href="/"
      />
    </span>
  </div>
  <div
    className="task-list-item-main"
  >
    <h4
      className="task-list-description"
    >
      <span
        className=""
      >
        <span
          className="title"
          onClick={[Function]}
        >
          My Task
        </span>
      </span>
      <span
        className="hidden"
      >
        <input
          className="title-input"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder="Click to add a title"
          type="text"
          value="My Task"
        />
      </span>
    </h4>
  </div>
  <div
    className="task-list-item-buttons"
  >
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="glyphicon glyphicon-trash"
      />
    </button>
    <button
      className="btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="glyphicon glyphicon-pause"
      />
    </button>
  </div>
</li>
`;
